--- a/AFG/index.html
+++ b/AFG/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <div class="wrap">
+  <div class="wrapper">
     <header class="header">
       <a name="top"></a>
       <div class="container">
@@ -22,7 +22,7 @@
           <img src="img/jpeg/Logo.png" class="logo">
         </a>
         <div class="header-wrap">
-          <div class="header-rightblock">
+          <div class="nav">
             <ul class="hide-nav">
               <li class="hide-nav__line hide-nav__line--top"></li>
               <li class="hide-nav__line hide-nav__line--middle"></li>
@@ -41,11 +41,11 @@
         </div>
       </div>
     </header>
-    <div class="main">
+    <section class="main">
       <div class="container">
         <div class="main-wrap">
           <div class="main-leftblock">
-            <span class="main-leftblock-header">Armata Financical Group</span>
+            <h3 class="main-leftblock-header">Armata Financical Group</h3>
             <div class="main-leftblock__line"></div>
             <ul class="main-leftblock_column">
               <li class="main-leftblock_column-item">Независимаяоценка имущества</li>
@@ -75,25 +75,27 @@
           </a>
         </div>
       </div>
-    </div>
-    <div class="assessment">
+    </section>
+    <section class="assessment">
       <div class="container">
         <div class="assessment-wrap">
           <h2 class="assessment-header">Независимая оценка умущества </h2>
           <div class="assessment-line"></div>
+          <article>
           <p class="assessment-title"><span class="assessment-title-bold"> Определение рыночной стоимости</span>
             </span>любого актива, или <a href="#" class="assessment-title-link">оценка</a>— это первый этап всех
             рыночных отношений. Оценка заключается в
             объективном анализе объекта с целью придания ему стоимостных характеристик, выраженных в едином денежном
             эквиваленте. </p>
+          </article>
           <div class="serviceblock">
             <div class="assessment-leftblock">
-              <div class="assessment-leftblock__item">
+              <article class="assessment-leftblock__item">
                 <a href="#" class="columns-left-link columns-left-firstlink">Оценка
                   ценных бумаг</a>
                 <span class="columns-left-info">Определение рыночной стоимости ценных бумаг и документов</span>
                 <div class="columns-item-line"></div>
-              </div>
+              </article>
               <div class="assessment-leftblock__item">
                 <a href="#" class="columns-left-link">Оценка машин и
                   оборудования</a>
@@ -148,8 +150,8 @@
       <div class="assessment-buttonblock">
         <a href="#" class="assessment-button">Заказать оценку</a>
       </div>
-    </div>
-    <div class="deal">
+    </section>
+    <section class="deal">
       <div class="container">
         <div class="deal-wrap">
           <h2 class="assessment-header deal-header ">Сделки M&A </h2>
@@ -210,8 +212,8 @@
       <div class="deal-buttonblock">
         <a href="#" class="deal-button">Заказать сопровождение</a>
       </div>
-    </div>
-    <div class="accounting">
+    </section>
+    <section class="accounting">
       <div class="container">
         <div class="accounting-wrap">
           <h2 class="accounting-header ">бухгалтерские услуги </h2>
@@ -280,8 +282,8 @@
       <div class="accounting-buttonblock">
         <a href="#" class="accounting-button">Заказать бухгалтерские услуги</a>
       </div>
-    </div>
-    <div class="advantages">
+    </section>
+    <section class="advantages">
       <div class="container">
         <div class="advantages-wrap">
           <h2 class="accounting-header advantages-header ">Преимущества Armata Financical Group</h2>
@@ -324,8 +326,8 @@
       <div class="advantages-buttonblock">
         <a href="#" class="advantages-button">Обратится к нас</a>
       </div>
-    </div>
-    <div class="conditions">
+    </section>
+    <section class="conditions">
       <div class="container">
         <h2 class="conditions-header">Как мы работаем</h2>
         <div class="condition-wrap">
@@ -342,8 +344,8 @@
       <div class="conditions-buttonblock">
         <a href="#" class="conditions-button">Оставить заявку</a>
       </div>
-    </div>
-    <div class="communication">
+    </section>
+    <section class="communication">
       <div class="container">
         <div class="communication-wrap">
           <h2 class="communication-header">C кем можно связатся через сайт</h2>
@@ -375,8 +377,8 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="reviews">
+    </section>
+    <section class="reviews">
       <div class="container">
         <h2 class="reviews-header">Отзывы клиентов</h2>
         <p class="reviews-title">Послушайте, что о нас говорят благодарные клиенты:
@@ -441,8 +443,8 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="skill">
+    </section>
+    <section class="skill">
       <div class="container">
         <div class="skill-wrap">
           <div class="skill-leftblock">
@@ -490,7 +492,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <footer class="footer">
       <div class="container">
         <div class="header-wrap">
